2004-05-12  Manuel Bouyer <bouyer@antioche.eu.org>
	* src/16bit-instructions.cc, src/p18x.cc, src/p18x.h, src/pic-instructions.cc,
	 src/pic-processor.cc, src/pic-processor.h: Fix usart problems in 18x devices.
	* src/pir.cc, src/pir.h, src/uart.cc, src/uart.h: Fix usart bugs.
	(Changes were submitted as a patch and applied by Scott).
	
2004-05-15 Scott Dattalo <scott@dattalo.com>
	* src/xref.h, xref.cc: added get_value() member function to XrefObject class
	* gui/gui.h, gui/gui_break.cc, gui/gui_main.cc, gui/gui_processor.cc,
	gui/gui_regwin.cc, gui/gui_regwin.h, gui/gui_statusbar.cc:
	Converted the structure labeled_entry into a class and renamed it
	to LabeledEntry.
	* gui/gui_statusbar.h: Added.

2004-05-12 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc: bi-directional I/O pins were not working properly
	with modules.
	* src/processor.cc: removed debug printf stuff
	* src/ioports.cc: IOPORT class was using a hardcoded number of pins

2004-04-27 Borut Razem <borut.razem@siol.net>
	* cli/input.cc, gui/gui_main.cc: fixes to make working of CLI & GUI
	in parallel

2004-04-22 Borut Razem <borut.razem@siol.net>
	* modules/binary_indicator.cc modules/binary_indicator.h modules/encoder.cc
	modules/encoder.h modules/gpsim_modules.cc modules/led.cc modules/led.h
	modules/logic.cc modules/logic.h modules/paraface.cc modules/paraface.h
	modules/push_button.cc modules/push_button.h modules/resistor.cc
	modules/resistor.h modules/switch.cc modules/switch.h modules/usart.cc
	modules/usart.h modules/video.cc modules/video.h: defined IN_MODULE
	symbol for modules, call get_interface(), get_cycles(), get_active_cpu(),
	get_symbol_table(), get_trace(void) accessor methods instead direct object
	access

2004-04-21 Borut Razem <borut.razem@siol.net>
	* src/gpsim_interface.h, src/gpsim_time.h, src/processor.cc, src/symbol.cc,
	src/trace.cc: create instances of inline methods by taking theirs address,
	so that they can be accessed from dynamic loadable modules
