@@ -1,3 +1,12 @@
+2004-05-15 Scott Dattalo <scott@dattalo.com>
+	* src/pic-processor: If the simulation is started from an address that has
+	an execution break, now gpsim will ignore that break.
+	* xpm/canbreak.xpm: New xpm that's used to indicate source lines that will
+	accept breakpoints.
+	* gui/gui_src.h, gui/gui_src_asm.h: Added 'canbreak' XPM to the source
+	browser lines that can accept break points. NOTE: this code currently
+	leaks memory!
+
 2004-05-12  Manuel Bouyer <bouyer@antioche.eu.org>
 	* src/16bit-instructions.cc, src/p18x.cc, src/p18x.h, src/pic-instructions.cc,
 	 src/pic-processor.cc, src/pic-processor.h: Fix usart problems in 18x devices.
